--- a/Admin/Admin/package.json
+++ b/Admin/Admin/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
     "nodemailer": "^7.0.12",
+    "number-counter": "^1.0.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
