--- a/Admin/Admin/package.json
+++ b/Admin/Admin/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "nodemailer": "^7.0.12",
     "number-counter": "^1.0.3",
