changing the email

--- a/Backend/.env
+++ b/Backend/.env
@@ -6,7 +6,7 @@ PGUSER='neondb_owner'
 PGPASSWORD='npg_Zds41VLyovwI'
 PGHOST='ep-steep-fire-a4znkjll-pooler.us-east-1.aws.neon.tech'
 PGDATABASE='BrightCoders_db'
-
+RESEND_API_KEY=re_jfjPqxkH_QLPEoT7Q4QsAj5nUtHsmZFaD
 # TO GENEARATE JWT_SECRET "node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 # "
 
