--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
+    "resend": "^6.8.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
