--- a/Backend/.env
+++ b/Backend/.env
@@ -15,3 +15,6 @@ EMAIL_PASS=vxhm xuvo tvkz vrpe
 ADMIN_EMAIL=mugwimiisaac230@gmail.com
 
 CLIENT_URL =http://localhost:5173,http://localhost:3000
+
+NODE_ENV=development
+
