--- a/Admin/Admin/package.json
+++ b/Admin/Admin/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
